deploy/cloudformation/servers/servers.yml
Description: >
    Craig Bath / Udacity IAC Project

# Declarations
# !Sub - https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/intrinsic-function-reference-sub.html
# !Ref - https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/intrinsic-function-reference-sub.html

Parameters:
    EnvironmentName:
        Description: An environment name that will be prefixed to resource names
        Type: String
    EnvironmentVPC:
        Description: The VPC for all environment architecture
        Type: String
    PubSubnetEast1A:
        Description: Public Subnet us-east-1a
        Type: String
    PubSubnetEast1B:
        Description: Public Subnet us-east-1b
        Type: String
    PrivSubnetEast1A:
        Description: Private Subnet us-east-1a
        Type: String
    PrivSubnetEast1B:
        Description: Private Subnet us-east-1b
        Type: String
    PrivSubnetsAll:
        Description: All private subnets for auto-scaling
        Type: CommaDelimitedList
    UbuntuAMI:
        Description: AMI ID for an Ubuntu 18 image
        Type: String

Resources:
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub Capstone-${ID}
      GroupDescription: Allow port 22 and port 8080
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      SecurityGroups:
        - Ref: InstanceSecurityGroup
      KeyName: udacity 
      ImageId: ami-083654bd07b5da81d   # Ubuntu 20.4 LTS
      Tags:
        - Key: Name
          Value: !Sub capstone-backend-${ID}

# https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/outputs-section-structure.html
#Outputs:
#  WebAppLBURL:
#    Description: The DNS of the load balancer
#    Value: !Join [ "", [ 'http://',!GetAtt WebAppLB.DNSName ] ]
#    Export:
#      Name: !Sub ${EnvironmentName}-LoadBalancer-URL
